# pageturtle

./: Cargo.toml  README.md  flake.nix
pageturtle_cli/: Cargo.toml
pageturtle_cli/src/: main.rs
pageturtle_cli/src/other/: getting_started.md  pageturtle.toml
pageturtle_core/: Cargo.toml
pageturtle_core/assets/: package-lock.json  package.json  styles.css  tailwind.config.js
pageturtle_core/assets/templates/: index.html  root.html
pageturtle_core/src/: blog.rs  feed.rs  lib.rs  rendering.rs  utils.rs
pageturtle_core/templates/: atom.xml  index.html  post.html  root.html  tags.html  toc-entry.html  toc.html
src/: main.rs
