[package]
name = "pageturtle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18.0"
serde_yaml = "0.9.21"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.3"
chrono = { version = "0.4.24", features = ["serde"] }
slug = "0.1.4"
