[package]
name = "pageturtle_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pageturtle"
path = "src/main.rs"

[dependencies]
clap = { version = "3", features = ["derive", "cargo"]}
walkdir = "2.3.3"
comrak = "0.18.0"
pageturtle_core = { path = "../pageturtle_core" }
rouille = "3.6.2"
notify = "6.0.0"
crossbeam-channel = "0.5.8"
