[package]
name = "pageturtle_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18.0"
serde_yaml = "0.9.21"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
slug = "0.1.4"
askama = "0.12.0"
toml = "0.7.4"
serde-xml-rs = "0.6.0"
